--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-tiktoken",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "JavaScript port of tiktoken",
   "license": "MIT",
   "scripts": {
@@ -56,7 +56,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dqbd/tiktoken"
+    "url": "https://github.com/mystist/tiktoken"
   },
   "dependencies": {
     "base64-js": "^1.5.1"
