--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-tiktoken",
+  "name": "js-tiktoken-mystist",
   "version": "1.0.10",
   "description": "JavaScript port of tiktoken",
   "license": "MIT",
