--- a/wasm/package.json
+++ b/wasm/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tiktoken",
-  "version": "1.0.11",
+  "name": "tiktoken-mystist",
+  "version": "1.0.12",
   "description": "JS/WASM bindings for tiktoken",
   "license": "MIT",
   "scripts": {
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dqbd/tiktoken"
+    "url": "https://github.com/mystist/tiktoken"
   },
   "dependencies": {},
   "devDependencies": {
